<resources>
    <string name="app_name">InvBrasil</string>

    <!--Screen ScreenDashboard-->
    <string name="welcome">Olá</string>
    <string name="text_value">Valor</string>
    <string name="text_low_stocks">Baixo Estoque</string>
    <string name="text_sale">Vendas</string>
    <string name="text_category">Categorias</string>
    <string name="text_edit_category">Editar Categoria</string>
    <string name="text_archive">GerarArquivos</string>
    <string name="text_exit">Sair</string>
    <string name="text_product">Produtos</string>
    <string name="text_view_stock">Mostrar baixo estoque</string>
    <string name="edit_text_category">Digite o nome da Categoria</string>


    <!--Title-->
    <string name="text_register_product">Registrar Produto</string>
    <string name="text_update_product">Atualizar Produto</string>
    <string name="text_register_sale">Registrar Venda</string>

    <string name="imagebtn_description">Adicionar categoria</string>

    <string name="text_name">Nome</string>
    <string name="text_quantity">Quantidade</string>
    <string name="text_quantity_min">Quantidade Minima</string>
    <string name="text_price">Preço</string>
    <string name="text_address">Endereço</string>
    <string name="text_color">Cor</string>
    <string name="text_data">Data</string>

    <!--Screen UpdateProduct-->
    <string name="btn_update">Atualizar</string>
    <string name="btn_register">Cadastrar</string>

    <!--Screen NewCategory-->
    <string name="app_nae">InvBrasil</string>

</resources>