<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/background"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".view.RegisterProduct">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_register_product"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold"
            android:layout_marginTop="40dp"
            android:layout_marginStart="24dp"
            />


        <EditText
            android:id="@+id/editNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_name"
            android:inputType="text"
            android:maxLines="1"
            android:padding="15dp"
            android:layout_marginTop="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/bg_card_item"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp">

            <Spinner
                android:id="@+id/spinnerCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_card_item"/>

            <ImageButton
                android:id="@+id/btNewCategory"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_add" />


        </LinearLayout>


        <EditText
            android:id="@+id/editQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/text_quantity"
            android:inputType="number"
            android:maxLength="3"
            android:padding="15dp"
            android:layout_marginTop="12dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:background="@drawable/bg_card_item"/>

        <EditText
            android:id="@+id/editQuantityMin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/text_quantity_min"
            android:inputType="number"
            android:maxLength="3"
            android:padding="15dp"
            android:layout_marginTop="12dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:background="@drawable/bg_card_item"/>

        <EditText
            android:id="@+id/editColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/text_color"
            android:inputType="text"
            android:maxLines="1"
            android:padding="15dp"
            android:layout_marginTop="12dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:background="@drawable/bg_card_item"/>

        <EditText
            android:id="@+id/editPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/text_price"
            android:inputType="number"
            android:maxLength="6"
            android:padding="15dp"
            android:layout_marginTop="12dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:background="@drawable/bg_card_item"/>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Cadastrar"
            android:textSize="18sp"
            android:backgroundTint="@color/primaria"
            android:textColor="@color/black"
            android:padding="15dp"
            android:layout_marginTop="40dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"/>



    </LinearLayout>

</ScrollView>