<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ScreenEditCategory"
    android:background="@color/background">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_edit_category"
            android:textAllCaps="true"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="24dp"
            />

        <Spinner
            android:id="@+id/spinnerEditCategory"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/bg_card_item"/>

        <EditText
            android:id="@+id/editTextCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_text_category"
            android:background="@drawable/bg_card_item"
            android:layout_margin="16dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnUpdateCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_update"
        android:textSize="16dp"
        android:layout_gravity="center"
        android:layout_marginBottom="128dp"
        android:backgroundTint="@color/primaria"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>